<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="0dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/recipeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="365dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/rowImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/post_image"
                        android:maxWidth="400dp"
                        android:maxHeight="250dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cookery_logo_round" />

                    <ImageView
                        android:id="@+id/recipeReportedImage"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/recipe_has_been_reported"
                        android:tooltipText="This recipe has been reported as inappropriate"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_report_problem_24dp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/recipeIDTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingEnd="16dp"
                    android:text="@string/recipeid"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/white"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/cardButtonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/deleteButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_delete_forever_24dp"
                        android:text="@string/delete"
                        android:textColor="@android:color/holo_red_dark" />

                    <Button
                        android:id="@+id/editButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_edit_24dp"
                        android:text="@string/edit"
                        android:textColor="@color/genericButtonColor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recipeViewButtonsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/rowReportButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_report_24dp"
                        android:text="@string/report"
                        android:textColor="@color/googleButtonColor" />

                    <Button
                        android:id="@+id/rowFavouriteButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_star_border_24dp"
                        android:text="@string/favourite"
                        android:textColor="@color/genericButtonColor" />

                    <Button
                        android:id="@+id/rowUnfavouriteButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_star_24dp"
                        android:text="@string/unfavourite"
                        android:textColor="@color/genericButtonColor"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>